@@ -46,7 +46,7 @@
 
 \vspace{1cm}\par
 
-{\large Stand Juni 2009}
+{\large Stand Janua 2010}
 \end{raggedright}
 
 \clearpage
@@ -10863,7 +10863,7 @@ Informationen bekommen, die von einem kleinen Tip bis zu ganzen
 Datenb"uchern reichen.  Hier eine Aufz"ahlung (wie oben gesagt, ohne 
 Garantie auf Vollst"andigkeit!):
 \par 
-Ernst Ahlers, Charles Altmann, Len Bayles, Andreas Bolsch,
+Ernst Ahlers, Charles Altmann, Marco Awater, Len Bayles, Andreas Bolsch,
 Rolf Buchholz, Bernd Casimir, Gunther Ewald, Stephan Hruschka, Peter
 Kliegelh"ofer, Ulf Meinke, Matthias Paul, Norbert Rosch, Steffen Schmid,
 Leonhard Schneider, Ernst Schwab, Michael Schwingen, Oliver Sellke,
@@ -12511,7 +12511,7 @@ damit mit der n"achsten Release alle etwas davon haben :-)
 
 \bibitem{LatMico8} Lattice Semiconductor Corporation: \\
                    {LatticeMico8 Microcontroller Users Guide.\/} \\
-                   Reference Design RD1026, July 2005 
+                   Reference Design RD1026, February 2008 
 
 \bibitem{MicroChip} Microchip Technology Inc.: \\
                     {\em Microchip Data Book.\/} \\
