@@ -1,6 +1,6 @@
 \tin{KCPSM3}    & 256     & 64      &   ---   &   ---   &   ---   &   ---   &  256    &   ---  & --- \\
 \hline
-\tin{Mico8 }    & 1024    & 256     &   ---   &   ---   &   ---   &   ---   &  256    &   ---  & --- \\
+\tin{Mico8 }    & 4096    & 256     &   ---   &   ---   &   ---   &   ---   &  256    &   ---  & --- \\
 \hline
 \tin{TLCS-}     & 16M     &   ---   &   ---   &   ---   &   ---   &   ---   &   ---   &   ---  & --- \\
 \tin{900(L)}    &         &         &         &         &         &         &         &        &     \\
