@@ -65,7 +65,7 @@
 
 \vspace{1cm}\par
 
-{\large Edition June 2009}
+{\large Edition January 2010}
 \end{raggedright}
 
 \clearpage
@@ -10551,7 +10551,7 @@ documentation.  I received information from an enormous amount of
 people, ranging from tips up to complete data books.  An enumeration
 follows (as stated before, without guarantee for completelessness!):
 
-Ernst Ahlers, Charles Altmann, Len Bayles, Andreas Bolsch, Rolf Buchholz,
+Ernst Ahlers, Charles Altmann, Marco Awater, Len Bayles, Andreas Bolsch, Rolf Buchholz,
 Bernd Casimir, Gunther Ewald, Stephan Hruschka, Peter Kliegelh\"ofer, Ulf
 Meinke, Matthias Paul, Norbert Rosch, Steffen Schmid, Leonhard Schneider,
 Ernst Schwab, Michael Schwingen, Oliver Sellke, Christian Stelter,
@@ -12172,7 +12172,7 @@ from this with the next release :-)
 
 \bibitem{LatMico8} Lattice Semiconductor Corporation: \\
                    {LatticeMico8 Microcontroller Users Guide.\/} \\
-                   Reference Design RD1026, July 2005
+                   Reference Design RD1026, February 2008
 
 \bibitem{MicroChip} Microchip Technology Inc.: \\
                     {\em Microchip Data Book.\/} \\
