@@ -5,9 +5,12 @@
 /* Dynamic String Handling                                                   */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: dynstring.c,v 1.4 2007/04/30 18:37:51 alfred Exp $                   */
+/* $Id: dynstring.c,v 1.1 2009/09/05 23:14:09 alfred Exp $                   */
 /*****************************************************************************
  * $Log: dynstring.c,v $
+ * Revision 1.1  2009/09/05 23:14:09  alfred
+ * - -
+ *
  *****************************************************************************/
 
 #include "stdinc.h"
